--- a/TheWag.Web/Components/Pages/Catalog.razor
+++ b/TheWag.Web/Components/Pages/Catalog.razor
@@ -21,7 +21,7 @@ else
     @foreach (var product in products)
     {
             <div class="col">
-                <div class="card" style="width: 18rem;">
+                    <div class="card container-sm">
                     <img src="@product.URL" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">@product.Id</h5>
