--- a/TheWag.Web/wwwroot/app.css
+++ b/TheWag.Web/wwwroot/app.css
@@ -60,3 +60,15 @@ h1:focus {
     height: 200px;
     object-fit: cover
 }
+
+.img, .force-fit-thumbnail {
+    width: 2em;
+    height: 2em;
+    object-fit: cover
+}
+
+.img, .icon {
+    width: 1em;
+    height: 1em;
+    object-fit: cover
+}
