--- a/TheWag.Web/Components/Layout/NavMenu.razor
+++ b/TheWag.Web/Components/Layout/NavMenu.razor
@@ -25,5 +25,11 @@
                 <span class="bi bi-list-nested" aria-hidden="true"></span> Shopping Cart
             </NavLink>
         </div>
+
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="sell">
+                <span class="bi bi-list-nested" aria-hidden="true"></span> Sell
+            </NavLink>
+        </div>
     </nav>
 </div>
