--- a/TheWag.Web/Components/Pages/Home.razor
+++ b/TheWag.Web/Components/Pages/Home.razor
@@ -5,12 +5,12 @@
 
 
 <div class="container-md">
-	<h1>Welcom to The Wag!</h1>
+	<h1>Welcome to The Wag!</h1>
 	<p>
-		The Wag is a friendly online store that sells dog photos, check out our <NavLink class="nav-link" href="catalog">catalog!</NavLink>
+		The Wag is a friendly online store that sells dog photos, check out our <NavLink href="catalog">catalog!</NavLink>
 	</p>
 	<p>
-		Uploads comming soon, stay tuned!
+		Need to put kibble on the table? Head over to the <NavLink href="sell">sell</NavLink> page and put your dog to work!
 	</p>
 	<p><img class="img-fluid" src="images/thewaglogo.png" /></p>
 </div>
