--- a/TheWag.Web/Components/Pages/Catalog.razor
+++ b/TheWag.Web/Components/Pages/Catalog.razor
@@ -64,20 +64,20 @@ else
         }
 
         //get all products
-        var productRepo = new ProductRepo();
-        var products = productRepo.GetProducts(null);
+       // var productRepo = new ProductRepo();
+        //var products = productRepo.GetProducts(null);
 
         //create a view model for each product
-        foreach (var product in products)
-        {
-            var qty = cart.Items.FirstOrDefault(x => x.Product.Id == product.Id)?.Quantity ?? 0;
-            vmProducts.Add(new vmProduct() { 
-                    Product = product, 
-                    Quantity = qty,
-                    addBtnText = qty > 0 ? "Add another" : "Add to cart",
-                    hideBadge = qty > 0 ? "" : "visually-hidden"
-            });
-        }
+        // foreach (var product in products)
+        // {
+        //     var qty = cart.Items.FirstOrDefault(x => x.Product.Id == product.Id)?.Quantity ?? 0;
+        //     vmProducts.Add(new vmProduct() { 
+        //             Product = product, 
+        //             Quantity = qty,
+        //             addBtnText = qty > 0 ? "Add another" : "Add to cart",
+        //             hideBadge = qty > 0 ? "" : "visually-hidden"
+        //     });
+        // }
 
         //persist the cart to session
         await ProtectedSessionStore.SetAsync("cart", cart);
@@ -114,7 +114,7 @@ else
 
     public class vmProduct
     {
-        public required Product Product { get; set; }
+        public required ProductDTO Product { get; set; }
         public int Quantity { get; set; } = 0;
         public required string addBtnText { get; set; }
         public string hideBadge { get; set; } = "";
