Add product post and EF/automapper work dev now connects to localy hosted blob

--- a/TheWag.Web/Components/Pages/Catalog.razor
+++ b/TheWag.Web/Components/Pages/Catalog.razor
@@ -1,6 +1,5 @@
 ﻿@using Microsoft.AspNetCore.Components.Server.ProtectedBrowserStorage
 @using TheWag.Models;
-@using TheWag.Data;
 
 @inject ProtectedSessionStorage ProtectedSessionStore
 
@@ -85,7 +84,7 @@ else
     }
 
 
-    private async Task AddToCart(int id)
+    private async Task AddToCart(int? id)
     {
         //update the vm
         var vm = vmProducts?.FirstOrDefault(x => x.Product.Id == id);
