--- a/TheWag.Web/Components/Pages/Cart.razor
+++ b/TheWag.Web/Components/Pages/Cart.razor
@@ -1,6 +1,8 @@
 ﻿@using Microsoft.AspNetCore.Components.Server.ProtectedBrowserStorage
+@using Microsoft.AspNetCore.Components.Web
+@using Microsoft.AspNetCore.OutputCaching
 @using TheWag.Models;
-@using TheWag.Data;
+
 
 @inject ProtectedSessionStorage ProtectedSessionStore
 
@@ -85,14 +87,14 @@
        
     }
 
-    private async Task AddItem(int id){
+    private async Task AddItem(int? id){
         var item = cart.Items.FirstOrDefault(x => x.Product.Id == id).Quantity++;
 
         await ProtectedSessionStore.SetAsync("cart", cart);
         UpdateTotal();
     }
 
-    private async Task RemoveItem(int id)
+    private async Task RemoveItem(int? id)
     {
         var item = cart.Items.FirstOrDefault(x => x.Product.Id == id);
         if (item.Quantity <= 1)
